# tosse-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/skills/build-app/: SKILL.md
.claude/skills/build-dev/: SKILL.md
.claude/skills/land/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/start/: SKILL.md
.github/: CODEOWNERS  release-install-note.md
.github/workflows/: ci.yml  release.yml
docs/: claude-code-protocol.md
public/file-icons/: icons.json
scripts/: bump-version.mjs  gen-file-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  agent-dev-build.conf.json  dev-build.conf.json  tauri.conf.json  tauri.conf.test-state.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accounts/: mod.rs
src-tauri/src/extensions/: mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/git/: history.rs  mod.rs  ops.rs  refs.rs  status.rs
src-tauri/src/ipc/: commands.rs  events.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/power/: mod.rs
src-tauri/src/store/: db.rs  mod.rs  model.rs
src-tauri/src/supervisor/: assembler.rs  control.rs  history.rs  mod.rs  model.rs  protocol.rs  session.rs  subagents.rs  transport.rs
src-tauri/src/supervisor/codex/: accounts.rs  config.rs  extensions.rs  history.rs  mod.rs  protocol.rs  server.rs  session.rs  transport.rs
src-tauri/src/supervisor/fixtures/: capture_codex_turn.jsonl  capture_skill.jsonl  capture_skill_live.jsonl  capture_subagent_wake.jsonl  capture_tasks.jsonl  capture_text.jsonl  capture_websearch.jsonl
src-tauri/src/terminal/: mod.rs
src-tauri/src/usage/: mod.rs
src/agent/: ask.test.ts  ask.ts  fleet.test.ts  fleet.ts  reminderSync.test.ts  reminderSync.ts  status.test.ts  status.ts  subagentMeta.test.ts  subagentMeta.ts  toolNames.test.ts  toolNames.ts  useAgentStatus.ts
src/features/conversation/: AgentBar.tsx  ArtifactCard.tsx  ArtifactRefCard.tsx  ArtifactViewer.tsx  ArtifactsChip.tsx  AuthWarningBar.tsx  BashBar.tsx  BashOutputPopover.tsx  CodeBlock.tsx  ConductorComposer.module.css  ConductorComposer.tsx  ConductorConversation.tsx  ConductorSidebar.tsx  ConductorThread.module.css  ConductorThread.tsx  ConvMark.tsx  ConversationPane.tsx  DiffView.module.css  DiffView.tsx  EffortGauge.test.ts  EffortGauge.tsx  FileMention.tsx  GoalChip.tsx  GoalPopover.tsx  LastMessagePin.tsx  LinkText.test.ts  LinkText.tsx  LiveSubThread.tsx  Markdown.module.css  MentionLink.test.ts  MentionPathChip.test.ts  MonitorBar.tsx  OpenInTerminalButton.tsx  PlanCard.tsx  QuestionnaireAsk.tsx  RemoteControlChip.tsx  ReviewBar.tsx  SidePanel.tsx  SlashCommandMenu.test.ts  SlashCommandMenu.tsx  (+72 more)
src/features/editor/: EditorErrorBoundary.tsx  EditorPane.tsx  EditorPanel.tsx  EditorToggle.tsx  FileContextMenu.tsx  FileTree.tsx  ImageViewer.tsx  MonacoView.tsx  PdfViewer.tsx  Splitter.tsx  editor.module.css  editorStore.test.ts  editorStore.ts  fileIcons.ts  fileOps.test.ts  fileOps.ts  language.test.ts  language.ts  monacoEnv.ts  useFsWatch.ts
src/features/extensions/: ExtensionsManager.module.css  ExtensionsManager.tsx  extensionsUiStore.ts  pluginReload.test.ts  pluginReload.ts  pluginUpdates.test.ts  pluginUpdates.ts
src/features/fleet/: FleetPlaceholder.tsx
src/features/flightdeck/: ActivityLine.tsx  AttentionBar.tsx  BackgroundTaskBadge.tsx  CardContext.tsx  CardEffort.tsx  CardGoal.tsx  CardPopover.tsx  FlightDeck.tsx  FlightDeckReplyModal.module.css  FlightDeckReplyModal.tsx  LastMessagePeek.tsx  StateActions.tsx  StateBlock.tsx  StreamCard.tsx  TodoPeek.tsx  flightdeckModalStore.ts
src/features/git/: ChangesList.tsx  CommitBox.tsx  CommitFileList.tsx  CommitGraphList.tsx  DiffPane.tsx  DiffSlot.tsx  GitGraph.tsx  GitToggle.tsx  GitWorkspace.tsx  RibbonDiff.tsx  WorktreeBadge.tsx  WorktreeIndicator.tsx  WorktreeManager.module.css  WorktreeManager.tsx  fileMeta.ts  git.module.css  gitViewStore.ts  graph.test.ts  graph.ts  worktree.test.ts  worktree.ts  worktreeUiStore.ts
src/features/history/: HistoryPanel.module.css  HistoryPanel.tsx  historyUiStore.ts  historyView.test.ts  historyView.ts
src/features/notifications/: SoundToggle.tsx
src/features/power/: CaffeinateHost.tsx  CaffeinateToggle.tsx
src/features/settings/: AccountsSection.module.css  AccountsSection.tsx  (+9 more)
src/ipc/: bindings.ts  client.ts  pickFolder.ts  provider.ts  useAccounts.ts  useCommands.ts  useExtensions.ts  useGit.ts  useGlobalSessionEvents.ts  useSessionEvents.ts  useWorktrees.ts
src/notifications/: notify.test.ts  notify.ts  sound.test.ts  sound.ts  transition.test.ts  transition.ts
src/store/: accountLogin.test.ts  accountLogin.ts  activity.test.ts  activity.ts  appErrors.ts  backgroundAgentAck.test.ts  backgroundTasksStore.test.ts  backgroundTasksStore.ts  binaryAvailable.ts  caffeinate.test.ts  caffeinate.ts  codexAvailable.ts  codexPlanUsage.test.ts  codexPlanUsage.ts  commandsStore.test.ts  commandsStore.ts  composerDrafts.test.ts  composerDrafts.ts  contextData.test.ts  contextData.ts  contextWindowCache.ts  conversationStore.ts  conversationsStore.test.ts  conversationsStore.ts  display.test.ts  display.ts  goalStore.test.ts  goalStore.ts  groupConversationsByRepo.test.ts  lastMessageSummary.test.ts  lastMessageSummary.ts  manualOrder.test.ts  manualOrder.ts  notifications.test.ts  notifications.ts  persist.test.ts  persist.ts  planAnnotations.test.ts  planAnnotations.ts  planUsage.ts  (+26 more)
src/ui/: AppErrorBanner.tsx  Button.module.css  ConfirmDialog.module.css  ConfirmDialog.tsx  Disclosure.module.css  Disclosure.tsx  Expandable.module.css  Expandable.tsx  FleetReadout.tsx  IconButton.tsx  RollText.module.css  RollText.tsx  Toggle.module.css  Toggle.tsx  TosseMark.tsx  conductor-aliases.css  conductor-conversation.css  conductor-fleet.css  conductor-flightdeck.css  conductor-markdown-modes.css  conductor-wirekit.css  kit.tsx  menuPlacement.test.ts  orderDnd.ts  shortcuts.test.ts  shortcuts.ts  ultra-blast.css  useNow.ts
src/util/: id.ts
(+8 files in other folders)
