[package]
name = "tosse-code"
version = "0.1.1"
description = "Tosse Code — desktop app to pilot Claude Code"
authors = ["Tosse"]
edition = "2021"

# The library is what mobile entry points and the binary share (Tauri 2).
[lib]
name = "tosse_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Secure auto-update: verifies a cryptographic signature on each artifact before
# installing (pubkey in tauri.conf.json, private key kept as a CI secret).
# `tauri-plugin-process` provides the relaunch after an update is applied.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Persistence: SQLite compiled into the binary (`bundled`) — nothing to install,
# no system dependency. Synchronous and tiny; our writes are rare and off the hot
# path, so we skip sqlx's async machinery (see `store/db.rs`).
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime for the supervisor: spawn `claude`, pipe stdio, drive tasks.
# Tauri 2 already runs on tokio; we depend on it directly for the features we use.
tokio = { version = "1", features = [
    "process",
    "io-util",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

# Typed IPC (Rust -> TS). RC versions: pin EXACTLY with "=".
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
# `serde_json` feature: lets `serde_json::Value` implement `specta::Type` so our
# IPC events can carry arbitrary tool inputs / results (exported to TS as JsonValue).
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
specta-typescript = "=0.0.9"

# Unix signals: a real `SIGTERM` (then `SIGKILL`) on the session's process group
# at teardown, so no `claude` descendant is ever orphaned. `tokio`'s own kill is
# `SIGKILL`-only and single-process.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
