[package]
name = "tosse-code"
version = "0.13.0"
description = "Tosse Code — desktop app to pilot Claude Code"
authors = ["Tosse"]
edition = "2021"

# The library is what mobile entry points and the binary share (Tauri 2).
[lib]
name = "tosse_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Secure auto-update: verifies a cryptographic signature on each artifact before
# installing (pubkey in tauri.conf.json, private key kept as a CI secret).
# `tauri-plugin-process` provides the relaunch after an update is applied.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# OS notifications (banner/Notification Center) for agent done / needs-attention
# events. The Dock bounce is a separate, custom command (see request_user_attention).
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
# preserve_order: keep object key order on round-trip, so editing the user's
# `~/.claude/settings.json` (plugin enable/disable) rewrites only the changed
# value and never re-sorts their whole config file.
serde_json = { version = "1", features = ["preserve_order"] }

# HTTP client for the internal `GET /api/oauth/usage` endpoint (real plan-usage %,
# absent from stream-json). Already in the tree transitively (via tauri-plugin-updater)
# with the EXACT same config — `rustls-no-provider` + the `ring` crypto provider from
# the separate `rustls` dep — so this adds no new crates / TLS stack / build cost. The
# provider is installed at runtime (idempotent guard, mirroring the updater) before the
# first client is built. Used only for rare, off-hot-path calls.
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Persistence: SQLite compiled into the binary (`bundled`) — nothing to install,
# no system dependency. Synchronous and tiny; our writes are rare and off the hot
# path, so we skip sqlx's async machinery (see `store/db.rs`).
rusqlite = { version = "0.32", features = ["bundled"] }

# Filesystem watching for the editor panel: live-refresh open files / the file
# tree when the agent (or anything) writes under the conversation's working dir.
# macOS FSEvents under the hood — one cheap recursive watch (see `fs/mod.rs`).
notify = "6"

# Integrated terminal: a real interactive PTY (the user's login shell) per
# conversation. `portable-pty` (the wezterm PTY layer) opens the pty, spawns the
# shell, pipes bytes both ways and handles resize — the side we must build (the
# product), see `terminal/mod.rs`. `base64` frames the raw PTY byte stream onto
# the JSON event bus losslessly (xterm's own decoder reassembles UTF-8 across
# chunks); cheaper + correct vs a `number[]` array or a per-chunk lossy decode.
# It also base64-encodes image bytes for the editor's image viewer (served to the
# webview as a `data:` URL — see `fs::read_image`).
portable-pty = "0.8"
base64 = "0.22"

# Async runtime for the supervisor: spawn `claude`, pipe stdio, drive tasks.
# Tauri 2 already runs on tokio; we depend on it directly for the features we use.
tokio = { version = "1", features = [
    "process",
    "io-util",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

# Typed IPC (Rust -> TS). RC versions: pin EXACTLY with "=".
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
# `serde_json` feature: lets `serde_json::Value` implement `specta::Type` so our
# IPC events can carry arbitrary tool inputs / results (exported to TS as JsonValue).
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
specta-typescript = "=0.0.9"

# Unix signals: a real `SIGTERM` (then `SIGKILL`) on the session's process group
# at teardown, so no `claude` descendant is ever orphaned. `tokio`'s own kill is
# `SIGKILL`-only and single-process.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
